update company logics and Jobs